plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = '1.0.0-SNAPSHOT'

compileJava {
    exclude '**/excluded/**'
}

compileTestJava {
    exclude '**/excluded/**'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.assertj:assertj-core:3.27.0'

}

//test {
//    useJUnitPlatform()
//    testLogging {
//        events "passed", "skipped", "failed", "standard_out", "standard_error"
//        showStandardStreams = true
//        exceptionFormat = "full"
//        showCauses = true
//        showStackTraces = true
//    }
//
//    // 테스트 결과를 항상 출력
//    outputs.upToDateWhen { false }
//}

tasks.named('test') {
    useJUnitPlatform()
}
